<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tools2="http://schemas.android.com/apk/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MainMenuTheme"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/topToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/aboutUs_btn"
        android:layout_width="60dp"
        android:layout_height="53dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/about_us"
        android:tint="@color/buttonTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="413dp"
        android:layout_height="677dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="411dp"
                android:layout_height="300dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/foregroundText">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="343dp"
                        android:layout_height="171dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="45dp"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="-2dp"
                        android:layout_marginEnd="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_marginBottom="130dp"
                        android:contentDescription="@string/singleplayer"
                        app:srcCompat="@drawable/singleplayer_icon_yellow" />
                </RelativeLayout>

                <Button
                    android:id="@+id/goToSingleplayerButton"
                    style="@style/MainMenuTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="180dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/bg_main_menu_1"
                    android:text="@string/singleplayer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.52" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="411dp"
                android:layout_height="330dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="372dp"
                    android:background="@color/foregroundText">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="202dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:contentDescription="@string/multiplayer"
                        app:srcCompat="@drawable/multiplayer_icon" />

                    <Button
                        android:id="@+id/goToMultiplayerButton"
                        style="@style/MainMenuTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="121dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="210dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginRight="0dp"
                        android:background="@drawable/bg_main_menu_1"
                        android:text="@string/multiplayer"
                        tools:layout_editor_absoluteX="10dp"
                        tools:layout_editor_absoluteY="10dp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>